--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/projecta
 spring.datasource.username=projecta
-spring.datasource.password=password1!
+spring.datasource.password=lolnoway1
 
 
 # Specify the DBMS
